# OpenGL

./: README.md
include/glad/: glad.h
src/00_00_test/: CMakeLists.txt  main.cpp
src/00_00_test/include/: Camera.h  Shader.h
src/01_01_hello_window/: CMakeLists.txt  main.cpp
src/01_hello_window/: main.cpp
src/02_01_hello_triangle/: CMakeLists.txt  main.cpp
src/02_02_homework_01/: CMakeLists.txt  glad.c  main.cpp
src/02_03_homework_02/: CMakeLists.txt  main.cpp
src/02_04_homework_03/: CMakeLists.txt  main.cpp
src/02_05_study_with_vao_count/: CMakeLists.txt  main.cpp
src/02_hello_triangle/: CMakeLists.txt  main.cpp
src/03_01_glsl_ins_outs/: CMakeLists.txt  main.cpp
src/03_02_uniform/: CMakeLists.txt  main.cpp
src/03_03_more_attributes/: CMakeLists.txt  main.cpp
src/03_04_my_shader/: CMakeLists.txt  Shader.cpp  main.cpp
src/03_05_homework_01/: CMakeLists.txt  Shader.h  main.cpp
src/03_05_homework_02/shaders/: shader_vs.glsl
src/03_06_homework_02/: CMakeLists.txt  Shader.cpp  main.cpp
src/03_06_homework_02/shaders/: shader_vs.glsl
src/03_07_homework_03/: CMakeLists.txt  Shader.cpp  main.cpp
src/03_07_homework_03/shaders/: shader_fs.glsl  shader_vs.glsl
src/04_01_texture/: Shader.h  stb_image.h
src/04_01_texture/shaders/: shader_fs.glsl
src/04_01_textures/: CMakeLists.txt  main.cpp
src/04_01_textures/shaders/: shader_vs.glsl
src/04_02_homework_01/: CMakeLists.txt  Shader.h  main.cpp
src/04_02_homework_01/shaders/: shader_fs.glsl
src/04_03_homework_02/: CMakeLists.txt  main.cpp
src/04_04_homework_03/: CMakeLists.txt  main.cpp  stb_image.h
src/04_04_homework_03/shaders/: shader_fs.glsl
src/04_05_homework_04/: CMakeLists.txt  main.cpp
src/04_05_homework_04/shaders/: shader_fs.glsl
src/05_01_transformations/: CMakeLists.txt  main.cpp
src/05_02_homework_01/: CMakeLists.txt  main.cpp
src/05_03_homework_02/: CMakeLists.txt  Shader.h  main.cpp
src/05_03_homework_02/shaders/: shader_vs.glsl
src/06_01_coordinate_systems/: CMakeLists.txt  Shader.cpp  main.cpp
src/06_02_homework_01/: CMakeLists.txt  main.cpp
src/06_03_homework_02/: CMakeLists.txt  main.cpp
src/06_03_homework_02/shaders/: shader_vs.glsl
src/06_04_homework_03/: CMakeLists.txt  main.cpp
src/07_01_camera/: CMakeLists.txt  main.cpp
src/07_01_camera/shaders/: shader_fs.glsl
src/07_01_camera/src/: Camera.cpp
src/07_02_homework_01/: CMakeLists.txt  main.cpp
src/07_02_homework_01/include/: Camera.h
src/07_02_homework_01/src/: Camera.cpp
src/07_03_homework_02/: CMakeLists.txt  main.cpp
src/07_03_homework_02/include/: Camera.h
src/07_03_homework_02/src/: Camera.cpp  Shader.cpp
src/08_01_lighting/: CMakeLists.txt  main.cpp
src/08_01_lighting/include/: Shader.h
src/08_01_lighting/shaders/: cube_fs.glsl
src/09_01_ambient_lighting/: CMakeLists.txt  main.cpp
src/09_01_ambient_lighting/shaders/: cube_fs.glsl
src/09_02_diffuse_lighting/: CMakeLists.txt  main.cpp
src/09_02_diffuse_lighting/shaders/: cube_fs.glsl
src/09_03_specular_lighting/: CMakeLists.txt  main.cpp
src/09_03_specular_lighting/shaders/: cube_fs.glsl
src/09_04_homework_01/: CMakeLists.txt  main.cpp
src/09_05_homework_02/: CMakeLists.txt  main.cpp
src/09_05_homework_02/shaders/: cube_fs.glsl
src/09_06_homework_03/: CMakeLists.txt  main.cpp
src/09_06_homework_03/shaders/: cube_fs.glsl  cube_vs.glsl
src/09_07_homework_04/: CMakeLists.txt  main.cpp
src/09_07_homework_04/include/: Camera.h
src/09_07_homework_04/shaders/: cube_fs.glsl  cube_vs.glsl
src/10_01_materials/: CMakeLists.txt  main.cpp
src/10_01_materials/shaders/: cube_fs.glsl
src/10_02_light_properties/: CMakeLists.txt  main.cpp
src/10_03_homework_01/: CMakeLists.txt  main.cpp
src/10_03_homework_01/shaders/: lamp_fs.glsl
src/10_04_homework_02/: CMakeLists.txt  main.cpp
src/10_04_homework_02/shaders/: cube_fs.glsl
src/11_01_diffuse_maps/: CMakeLists.txt  main.cpp
src/11_01_diffuse_maps/include/: Shader.h
src/11_01_diffuse_maps/shaders/: cube_fs.glsl
src/11_02_specular_maps/: CMakeLists.txt  main.cpp
src/11_02_specular_maps/include/: Camera.h
src/11_02_specular_maps/shaders/: cube_fs.glsl
src/11_03_homework_01/: CMakeLists.txt  main.cpp
src/11_04_homework_02/: CMakeLists.txt  main.cpp
src/11_04_homework_02/shaders/: cube_fs.glsl
src/11_04_homework_02/src/: Shader.cpp
src/11_05_homework_03/: CMakeLists.txt  main.cpp
src/11_06_homework_04/: CMakeLists.txt  main.cpp
src/11_06_homework_04/include/: Camera.h
src/11_06_homework_04/shaders/: cube_fs.glsl
src/11_06_homework_04/src/: Camera.cpp
videos/: 05_02_homework_01.mkv  07_02_camera.mkv  07_03_camera.mkv  09_02_diffuse_lighting.mkv  09_03_specular_lighting.mkv  09_04_homework_01.mkv  09_05_homework_02.mkv  09_06_homework_03.mkv  10_01_material.mkv  10_02_homework_01.mkv  11_01_homework_04.mkv
